// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows to define a custom component 1`] = `
<DummyComponent
  getRef={[Function]}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <object
    onLoad={[Function]}
    style={
      Object {
        "display": "block",
        "height": "100%",
        "left": 0,
        "overflow": "hidden",
        "pointerEvents": "none",
        "position": "absolute",
        "top": 0,
        "width": "100%",
        "zIndex": -1,
      }
    }
    type="text/html"
  />
</DummyComponent>
`;

exports[`allows to define an \`onResize\` property 1`] = `
<ResizeAware
  component="div"
  onResize={[Function]}
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <object
      onLoad={[Function]}
      style={
        Object {
          "display": "block",
          "height": "100%",
          "left": 0,
          "overflow": "hidden",
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
          "width": "100%",
          "zIndex": -1,
        }
      }
      type="text/html"
    />
  </div>
</ResizeAware>
`;

exports[`allows to use its child as target 1`] = `
<ResizeAware
  component="div"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <object
      onLoad={[Function]}
      style={
        Object {
          "display": "block",
          "height": "100%",
          "left": 0,
          "overflow": "hidden",
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
          "width": "100%",
          "zIndex": -1,
        }
      }
      type="text/html"
    />
    <DummyComponent>
      <div>
        x
      </div>
    </DummyComponent>
  </div>
</ResizeAware>
`;

exports[`allows to use its children as target 1`] = `
<ResizeAware
  component="div"
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <object
      onLoad={[Function]}
      style={
        Object {
          "display": "block",
          "height": "100%",
          "left": 0,
          "overflow": "hidden",
          "pointerEvents": "none",
          "position": "absolute",
          "top": 0,
          "width": "100%",
          "zIndex": -1,
        }
      }
      type="text/html"
    />
    <DummyComponent>
      <div>
        x
      </div>
    </DummyComponent>
  </div>
</ResizeAware>
`;
